[fix] On mobile, clicking the "Conversations" menu item should now open a new page, instead of showing a somewhat-broken overlay.
[fix] Read receipt indicators are now shown correctly.

[change] The color of the text in messages is now @secondary-color instead of @control-bg, which I hope will show up better.

--- a/resources/less/extension.less
+++ b/resources/less/extension.less
@@ -234,31 +234,19 @@
       padding: 10px;
 
       .message-read {
-        float: right;
-        position: relative;
-        left: 14px;
-        margin-top: 48px;
+        display: flex;
+        align-items: end;
+        margin-bottom: 2px;
       }
-
 
       .startConvo {
         text-align: center;
         padding-bottom: 20px;
       }
 
-
       .message-data {
+        display: flex;
         margin-bottom: 15px;
-
-        .me {
-          float: right;
-          margin-right: 0;
-          margin-left: 5px;
-        }
-
-        .other {
-          float: left;
-        }
 
         .avatar-inline {
           display: inline-block;
@@ -274,13 +262,6 @@
 
       }
 
-      .align-right {
-        .message-data-name {
-          float: right;
-          margin-right: 3px;
-        }
-      }
-
       .message-data-name {
         font-weight: 600;
         margin-left: 5px;
@@ -292,26 +273,53 @@
       }
 
       ul {
-        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
         padding: 0px;
         margin: 0;
+        list-style-type: none;
       }
 
-      .message-preview {
-        opacity: 0.5;
+      .my-message {
+        .message-data {
+          justify-content: end;
+        }
+
+        .message-text-and-indicators {
+          flex-direction: row-reverse;
+        }
+
+        .message-text {
+          background: @primary-color;
+        }
       }
 
-      .message {
-        color: @control-bg;
-        padding: 10px 18px 10px 18px;
+      .other-message {
+        .message-text {
+          background: @muted-more-color;
+        }
+      }
+    }
+
+    .message-content {
+      display: flex;
+      flex-direction: column;
+
+      .message-text-and-indicators {
+        display: flex;
+        gap: 10px;
+      }
+
+      .message-text {
+        color: @secondary-color;
+        padding: 10px 18px;
         line-height: 26px;
         font-size: 16px;
         word-wrap: break-word;
         border-radius: @border-radius;
         display: inline-block;
-        margin-bottom: 30px;
-        max-width: 50%;
-        position: relative;
+        max-width: 95%;
 
         a {
           color: @secondary-color;
@@ -325,20 +333,10 @@
           max-width: 100%
         }
       }
+    }
 
-      .my-message {
-        background: @primary-color;
-      }
-
-      .other-message {
-        background: @muted-more-color;
-
-        &:after {
-          border-bottom-color: @secondary-color;
-          left: 93%;
-        }
-      }
-
+    .message-preview {
+      opacity: 0.5;
     }
 
     .chat-message {
@@ -565,9 +563,9 @@
   .App--conversations {
     padding-bottom: 0;
 
-    // .App-content {
-    //   padding-bottom: 0;
-    // }
+    .App-content {
+      padding-bottom: 0;
+    }
   }
 
   .ConversationsPage.viewing-conversation .people-list {
@@ -582,7 +580,7 @@
   }
 
   .ConversationsList .chat .chat-message {
-    padding: 0;
+    padding: 1em;
   }
 }
 
